<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SettingDialog</class>
 <widget class="QDialog" name="SettingDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>466</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>QtSpim Settings</string>
  </property>
  <widget class="QTabWidget" name="tabWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>0</y>
     <width>580</width>
     <height>421</height>
    </rect>
   </property>
   <property name="currentIndex">
    <number>1</number>
   </property>
   <widget class="QWidget" name="tab">
    <attribute name="title">
     <string>MIPS</string>
    </attribute>
    <widget class="QWidget" name="gridLayoutWidget_1">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>10</y>
       <width>531</width>
       <height>371</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="QGroupBox" name="groupBox_3">
        <property name="title">
         <string>Exception Handler</string>
        </property>
        <widget class="QWidget" name="gridLayoutWidget_2">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>20</y>
           <width>481</width>
           <height>72</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <layout class="QGridLayout" name="gridLayout_3">
            <item row="0" column="3">
             <widget class="QLineEdit" name="exceptionHandlerLineEdit">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                <horstretch>1</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
            <item row="0" column="0">
             <widget class="QCheckBox" name="loadExceptionHandlerCheckBox">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="text">
               <string>Load Exception Handler</string>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
             <widget class="QLabel" name="label_2">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="text">
               <string>File</string>
              </property>
             </widget>
            </item>
            <item row="0" column="4">
             <widget class="QToolButton" name="exceptionHandlerToolButton">
              <property name="minimumSize">
               <size>
                <width>26</width>
                <height>22</height>
               </size>
              </property>
              <property name="text">
               <string>...</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <spacer name="horizontalSpacer_3">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </item>
          <item alignment="Qt::AlignHCenter">
           <widget class="QPushButton" name="exceptionHandlerResetButton">
            <property name="minimumSize">
             <size>
              <width>200</width>
              <height>32</height>
             </size>
            </property>
            <property name="text">
             <string>Use default exception handler</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QGroupBox" name="groupBox_2">
        <property name="title">
         <string>MIPS Simulation Settings</string>
        </property>
        <widget class="QWidget" name="layoutWidget_1">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>30</y>
           <width>481</width>
           <height>141</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_1">
          <item>
           <layout class="QGridLayout" name="gridLayout_2">
            <item row="0" column="0">
             <widget class="settableCheckBox" name="bareMachineCheckBox">
              <property name="text">
               <string>Bare Machine</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
             <widget class="settableCheckBox" name="delayedBranchCheckBox">
              <property name="text">
               <string>Enable Delayed Branches</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
             <widget class="settableCheckBox" name="delayedLoadCheckBox">
              <property name="text">
               <string>Enable Delayed Loads</string>
              </property>
             </widget>
            </item>
            <item row="2" column="0">
             <widget class="QCheckBox" name="mappedIOCheckBox">
              <property name="text">
               <string>Enable Mapped IO</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="settableCheckBox" name="pseudoInstCheckBox">
              <property name="text">
               <string>Accept Pseudo Instructions</string>
              </property>
             </widget>
            </item>
           </layout>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout">
            <item>
             <widget class="QPushButton" name="simplePushButton">
              <property name="minimumSize">
               <size>
                <width>239</width>
                <height>32</height>
               </size>
              </property>
              <property name="text">
               <string>Simple Machine</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="barePushButton">
              <property name="minimumSize">
               <size>
                <width>238</width>
                <height>32</height>
               </size>
              </property>
              <property name="text">
               <string>Bare Machine</string>
              </property>
             </widget>
            </item>
           </layout>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
     </layout>
    </widget>
   </widget>
   <widget class="QWidget" name="tab_2">
    <attribute name="title">
     <string>QtSpim</string>
    </attribute>
    <widget class="QWidget" name="verticalLayoutWidget_1">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>10</y>
       <width>531</width>
       <height>371</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <item>
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
         <string>Simulator</string>
        </property>
        <widget class="QWidget" name="layoutWidget_2">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>20</y>
           <width>491</width>
           <height>91</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
             <widget class="QLabel" name="label_3">
              <property name="text">
               <string>Length of Recent File list</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QLineEdit" name="recentFilesLineEdit">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
             </widget>
            </item>
            <item>
             <spacer name="horizontalSpacer_4">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>0</width>
                <height>0</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_3">
            <item>
             <widget class="QCheckBox" name="quietCheckBox">
              <property name="text">
               <string>Quiet</string>
              </property>
             </widget>
            </item>
           </layout>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox_4">
        <property name="title">
         <string>Register Windows</string>
        </property>
        <widget class="QWidget" name="gridLayoutWidget_3">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>20</y>
           <width>491</width>
           <height>91</height>
          </rect>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <item row="1" column="1">
           <widget class="QLineEdit" name="regWinBackgroundLineEdit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QLineEdit" name="regWinFontLineEdit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Background Color</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
            </property>
           </widget>
          </item>
          <item row="1" column="2">
           <widget class="QToolButton" name="regWinBackgroundToolButton">
            <property name="minimumSize">
             <size>
              <width>26</width>
              <height>22</height>
             </size>
            </property>
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Font</string>
            </property>
           </widget>
          </item>
          <item row="0" column="4">
           <widget class="QLineEdit" name="regWinFontColorLineEdit"/>
          </item>
          <item row="0" column="5">
           <widget class="QToolButton" name="regWinFontColorToolButton">
            <property name="minimumSize">
             <size>
              <width>26</width>
              <height>22</height>
             </size>
            </property>
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
          <item row="0" column="3">
           <widget class="QLabel" name="label_7">
            <property name="text">
             <string>Color</string>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
           <widget class="QToolButton" name="regWinFontToolButton">
            <property name="minimumSize">
             <size>
              <width>26</width>
              <height>22</height>
             </size>
            </property>
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox_5">
        <property name="title">
         <string>Text and Data Windows</string>
        </property>
        <widget class="QWidget" name="gridLayoutWidget_4">
         <property name="geometry">
          <rect>
           <x>20</x>
           <y>20</y>
           <width>491</width>
           <height>91</height>
          </rect>
         </property>
         <layout class="QGridLayout" name="gridLayout_5">
          <item row="0" column="5">
           <widget class="QToolButton" name="textWinFontColorToolButton">
            <property name="minimumSize">
             <size>
              <width>26</width>
              <height>22</height>
             </size>
            </property>
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
          <item row="0" column="4">
           <widget class="QLineEdit" name="textWinFontColorLineEdit"/>
          </item>
          <item row="1" column="1">
           <widget class="QLineEdit" name="textWinBackgroundLineEdit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_6">
            <property name="text">
             <string>Background Color</string>
            </property>
           </widget>
          </item>
          <item row="1" column="2">
           <widget class="QToolButton" name="textWinBackgroundToolButton">
            <property name="minimumSize">
             <size>
              <width>26</width>
              <height>22</height>
             </size>
            </property>
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
          <item row="0" column="3">
           <widget class="QLabel" name="label_8">
            <property name="text">
             <string>Color</string>
            </property>
           </widget>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_5">
            <property name="text">
             <string>Font</string>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
           <widget class="QToolButton" name="textWinFontToolButton">
            <property name="minimumSize">
             <size>
              <width>26</width>
              <height>22</height>
             </size>
            </property>
            <property name="text">
             <string>...</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QLineEdit" name="textWinFontLineEdit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
     </layout>
    </widget>
   </widget>
  </widget>
  <widget class="QDialogButtonBox" name="buttonBox">
   <property name="geometry">
    <rect>
     <x>210</x>
     <y>430</y>
     <width>180</width>
     <height>23</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>180</width>
     <height>23</height>
    </size>
   </property>
   <property name="standardButtons">
    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
   </property>
   <property name="centerButtons">
    <bool>true</bool>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>settableCheckBox</class>
   <extends>QCheckBox</extends>
   <header location="global">settablecheckbox.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>tabWidget</tabstop>
  <tabstop>bareMachineCheckBox</tabstop>
  <tabstop>pseudoInstCheckBox</tabstop>
  <tabstop>delayedBranchCheckBox</tabstop>
  <tabstop>delayedLoadCheckBox</tabstop>
  <tabstop>mappedIOCheckBox</tabstop>
  <tabstop>simplePushButton</tabstop>
  <tabstop>barePushButton</tabstop>
  <tabstop>loadExceptionHandlerCheckBox</tabstop>
  <tabstop>exceptionHandlerLineEdit</tabstop>
  <tabstop>exceptionHandlerToolButton</tabstop>
  <tabstop>exceptionHandlerResetButton</tabstop>
  <tabstop>buttonBox</tabstop>
  <tabstop>recentFilesLineEdit</tabstop>
  <tabstop>regWinFontLineEdit</tabstop>
  <tabstop>regWinFontToolButton</tabstop>
  <tabstop>regWinFontColorLineEdit</tabstop>
  <tabstop>regWinFontColorToolButton</tabstop>
  <tabstop>regWinBackgroundLineEdit</tabstop>
  <tabstop>regWinBackgroundToolButton</tabstop>
  <tabstop>textWinFontLineEdit</tabstop>
  <tabstop>textWinFontToolButton</tabstop>
  <tabstop>textWinFontColorLineEdit</tabstop>
  <tabstop>textWinFontColorToolButton</tabstop>
  <tabstop>textWinBackgroundLineEdit</tabstop>
  <tabstop>textWinBackgroundToolButton</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>SettingDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>317</x>
     <y>441</y>
    </hint>
    <hint type="destinationlabel">
     <x>299</x>
     <y>235</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>SettingDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>317</x>
     <y>441</y>
    </hint>
    <hint type="destinationlabel">
     <x>299</x>
     <y>235</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
